feat(condo): updated translations of classifiers

--- a/apps/condo/lang/en/en.json
+++ b/apps/condo/lang/en/en.json
@@ -3436,29 +3436,29 @@
   "ticket.place.classifier.DOCUMENTS.name": "Documents",
   "ticket.place.classifier.FACADES.name": "Facades",
   "ticket.place.classifier.ATTICS_BASEMENTS.name": "Attics, basements",
-  "ticket.place.classifier.ROOFING.name": "Кровля",
-  "ticket.place.classifier.NON_RESIDENTIAL_PREMISES.name": "Нежилое помещение",
-  "ticket.place.classifier.FEEDBACK_ON_WORK.name": "Отзыв о работе",
-  "ticket.problem.classifier.ORDER_RECEIPT_CHANGE.name": "Заказ/получение/изменение",
-  "ticket.problem.classifier.RESIDENT_AFFECTED.name": "Пострадал житель",
-  "ticket.problem.classifier.PROPERTY_DAMAGED.name": "Пострадало имущество",
-  "ticket.problem.classifier.PROJECTS_TECHNICAL_SPECIFICATIONS.name": "Проекты/Технические условия",
-  "ticket.problem.classifier.GUTTER_STORM_DRAIN_DAMAGE.name": "Повреждение водостока/ливневки",
-  "ticket.problem.classifier.SNOW_ICE_REMOVAL_ON_ROOF.name": "Уборка снега/наледи/сосулек на крыше",
-  "ticket.problem.classifier.PARKING_SPOT_OCCUPIED.name": "Занято место, посторонние на парковке",
-  "ticket.problem.classifier.CURRENT_REPAIR.name": "Текущий ремонт",
-  "ticket.problem.classifier.REPAIR_MALFUNCTION.name": "Ремонт/Неисправность",
-  "ticket.problem.classifier.ELEVATOR_CABIN_ELEMENT_FAILURE.name": "Неисправность элементов кабины лифта",
-  "ticket.problem.classifier.NO_CONNECTION_WITH_DISPATCHER.name": "Нет связи с диспетчером",
-  "ticket.problem.classifier.NO_LIGHTING.name": "Нет освещения",
-  "ticket.problem.classifier.SHAKING_SCRAPING_NOISE.name": "Тряска/скрежет/шум",
-  "ticket.problem.classifier.ITEMS_DROPPED_IN_ELEVATOR_SHAFT.name": "Упали ключи/вещи в шахту лифта",
-  "ticket.problem.classifier.CLOSE_SMOKE_EVACUATION_VALVE.name": "Закрыть клапан дымоудаления",
-  "ticket.problem.classifier.FIRE_HOSE_CABINETS_PRESENT.name": "Наличие рукавов, шкафов и пр",
-  "ticket.problem.classifier.FIRE_ALARM_TRIGGERED.name": "Сработала противопожарная сигнализация",
-  "ticket.problem.classifier.WALLS_CEILING_FLOOR_STRUCTURES.name": "Стены, потолок, пол, перекрытия",
-  "ticket.problem.classifier.PEST_CONTROL_DISINFECTION.name": "Дератизация, дезинсекция, дезинфекция",
-  "ticket.problem.classifier.CRACKS_MASONRY_PLASTER_DAMAGE.name": "Трещины, выпадение кладки/штукатурки, повреждение отмостки/цоколя",
-  "ticket.problem.classifier.SIGNAGE_ADVERTISING_EQUIPMENT_ON_FACADE.name": "Надпись/реклама/оборудование на фасаде",
-  "ticket.problem.classifier.REPAIR_IN_ROOM.name": "Ремонт в помещении"
+  "ticket.place.classifier.ROOFING.name": "Roof",
+  "ticket.place.classifier.NON_RESIDENTIAL_PREMISES.name": "Non-residential premise",
+  "ticket.place.classifier.FEEDBACK_ON_WORK.name": "Feedback about the work",
+  "ticket.problem.classifier.ORDER_RECEIPT_CHANGE.name": "Order/Receipt/Change",
+  "ticket.problem.classifier.RESIDENT_AFFECTED.name": "A resident was injured",
+  "ticket.problem.classifier.PROPERTY_DAMAGED.name": "Property affected",
+  "ticket.problem.classifier.PROJECTS_TECHNICAL_SPECIFICATIONS.name": "Projects/Technical Specifications",
+  "ticket.problem.classifier.GUTTER_STORM_DRAIN_DAMAGE.name": "Waterspout / storm drain damage",
+  "ticket.problem.classifier.SNOW_ICE_REMOVAL_ON_ROOF.name": "Snow, ice, and icicle removal from the roof",
+  "ticket.problem.classifier.PARKING_SPOT_OCCUPIED.name": "Parking space occupied, unauthorized vehicles in the parking area",
+  "ticket.problem.classifier.CURRENT_REPAIR.name": "Current repair",
+  "ticket.problem.classifier.REPAIR_MALFUNCTION.name": "Repair/Malfunction",
+  "ticket.problem.classifier.ELEVATOR_CABIN_ELEMENT_FAILURE.name": "Malfunction of elevator cabin components",
+  "ticket.problem.classifier.NO_CONNECTION_WITH_DISPATCHER.name": "No communication with dispatcher",
+  "ticket.problem.classifier.NO_LIGHTING.name": "No lighting",
+  "ticket.problem.classifier.SHAKING_SCRAPING_NOISE.name": "Vibration/screeching/noise",
+  "ticket.problem.classifier.ITEMS_DROPPED_IN_ELEVATOR_SHAFT.name": "Keys/things fell down the lift shaft",
+  "ticket.problem.classifier.CLOSE_SMOKE_EVACUATION_VALVE.name": "Close smoke exhaust valve",
+  "ticket.problem.classifier.FIRE_HOSE_CABINETS_PRESENT.name": "Availability of hoses, cabinets, etc.",
+  "ticket.problem.classifier.FIRE_ALARM_TRIGGERED.name": "The fire alarm was triggered",
+  "ticket.problem.classifier.WALLS_CEILING_FLOOR_STRUCTURES.name": "Walls, ceiling, floor, slabs",
+  "ticket.problem.classifier.PEST_CONTROL_DISINFECTION.name": "Deratisation, disinsection, disinfection",
+  "ticket.problem.classifier.CRACKS_MASONRY_PLASTER_DAMAGE.name": "Cracks, falling out of masonry/plaster, damage to the pavement/jamb",
+  "ticket.problem.classifier.SIGNAGE_ADVERTISING_EQUIPMENT_ON_FACADE.name": "Inscription/advertising/equipment on facade",
+  "ticket.problem.classifier.REPAIR_IN_ROOM.name": "Room repair"
 }
