--- a/apps/condo/lang/es/es.json
+++ b/apps/condo/lang/es/es.json
@@ -3436,29 +3436,29 @@
   "ticket.place.classifier.DOCUMENTS.name": "Documentos",
   "ticket.place.classifier.FACADES.name": "Fachadas",
   "ticket.place.classifier.ATTICS_BASEMENTS.name": "Aticos, sótanos",
-  "ticket.place.classifier.ROOFING.name": "Кровля",
-  "ticket.place.classifier.NON_RESIDENTIAL_PREMISES.name": "Нежилое помещение",
-  "ticket.place.classifier.FEEDBACK_ON_WORK.name": "Отзыв о работе",
-  "ticket.problem.classifier.ORDER_RECEIPT_CHANGE.name": "Заказ/получение/изменение",
-  "ticket.problem.classifier.RESIDENT_AFFECTED.name": "Пострадал житель",
-  "ticket.problem.classifier.PROPERTY_DAMAGED.name": "Пострадало имущество",
-  "ticket.problem.classifier.PROJECTS_TECHNICAL_SPECIFICATIONS.name": "Проекты/Технические условия",
-  "ticket.problem.classifier.GUTTER_STORM_DRAIN_DAMAGE.name": "Повреждение водостока/ливневки",
-  "ticket.problem.classifier.SNOW_ICE_REMOVAL_ON_ROOF.name": "Уборка снега/наледи/сосулек на крыше",
-  "ticket.problem.classifier.PARKING_SPOT_OCCUPIED.name": "Занято место, посторонние на парковке",
-  "ticket.problem.classifier.CURRENT_REPAIR.name": "Текущий ремонт",
-  "ticket.problem.classifier.REPAIR_MALFUNCTION.name": "Ремонт/Неисправность",
-  "ticket.problem.classifier.ELEVATOR_CABIN_ELEMENT_FAILURE.name": "Неисправность элементов кабины лифта",
-  "ticket.problem.classifier.NO_CONNECTION_WITH_DISPATCHER.name": "Нет связи с диспетчером",
-  "ticket.problem.classifier.NO_LIGHTING.name": "Нет освещения",
-  "ticket.problem.classifier.SHAKING_SCRAPING_NOISE.name": "Тряска/скрежет/шум",
-  "ticket.problem.classifier.ITEMS_DROPPED_IN_ELEVATOR_SHAFT.name": "Упали ключи/вещи в шахту лифта",
-  "ticket.problem.classifier.CLOSE_SMOKE_EVACUATION_VALVE.name": "Закрыть клапан дымоудаления",
-  "ticket.problem.classifier.FIRE_HOSE_CABINETS_PRESENT.name": "Наличие рукавов, шкафов и пр",
-  "ticket.problem.classifier.FIRE_ALARM_TRIGGERED.name": "Сработала противопожарная сигнализация",
-  "ticket.problem.classifier.WALLS_CEILING_FLOOR_STRUCTURES.name": "Стены, потолок, пол, перекрытия",
-  "ticket.problem.classifier.PEST_CONTROL_DISINFECTION.name": "Дератизация, дезинсекция, дезинфекция",
-  "ticket.problem.classifier.CRACKS_MASONRY_PLASTER_DAMAGE.name": "Трещины, выпадение кладки/штукатурки, повреждение отмостки/цоколя",
-  "ticket.problem.classifier.SIGNAGE_ADVERTISING_EQUIPMENT_ON_FACADE.name": "Надпись/реклама/оборудование на фасаде",
-  "ticket.problem.classifier.REPAIR_IN_ROOM.name": "Ремонт в помещении"
+  "ticket.place.classifier.ROOFING.name": "Tejados",
+  "ticket.place.classifier.NON_RESIDENTIAL_PREMISES.name": "Local no residencial",
+  "ticket.place.classifier.FEEDBACK_ON_WORK.name": "Reseña sobre el trabajo",
+  "ticket.problem.classifier.ORDER_RECEIPT_CHANGE.name": "Pedido/Recepción/Modificación",
+  "ticket.problem.classifier.RESIDENT_AFFECTED.name": "Un propietario fue afectado",
+  "ticket.problem.classifier.PROPERTY_DAMAGED.name": "Propiedad afectada",
+  "ticket.problem.classifier.PROJECTS_TECHNICAL_SPECIFICATIONS.name": "Proyectos/Especificaciones técnicas",
+  "ticket.problem.classifier.GUTTER_STORM_DRAIN_DAMAGE.name": "Daños en el canalón/sistema de aguas pluviales",
+  "ticket.problem.classifier.SNOW_ICE_REMOVAL_ON_ROOF.name": "Retirada de nieve/hielo/carámbanos del tejado",
+  "ticket.problem.classifier.PARKING_SPOT_OCCUPIED.name": "Espacio ocupado, personas no autorizadas en el aparcamiento",
+  "ticket.problem.classifier.CURRENT_REPAIR.name": "Reparación actual",
+  "ticket.problem.classifier.REPAIR_MALFUNCTION.name": "Reparación/avería",
+  "ticket.problem.classifier.ELEVATOR_CABIN_ELEMENT_FAILURE.name": "Avería de elementos de cabina de ascensor",
+  "ticket.problem.classifier.NO_CONNECTION_WITH_DISPATCHER.name": "No hay comunicación con el despachador",
+  "ticket.problem.classifier.NO_LIGHTING.name": "No hay iluminación",
+  "ticket.problem.classifier.SHAKING_SCRAPING_NOISE.name": "Vibración/chirridos/ruido",
+  "ticket.problem.classifier.ITEMS_DROPPED_IN_ELEVATOR_SHAFT.name": "Se cayeron llaves/cosas por el hueco del ascensor",
+  "ticket.problem.classifier.CLOSE_SMOKE_EVACUATION_VALVE.name": "Cerrar la válvula de extracción de humo",
+  "ticket.problem.classifier.FIRE_HOSE_CABINETS_PRESENT.name": "Disponibilidad de mangueras, armarios, etc.",
+  "ticket.problem.classifier.FIRE_ALARM_TRIGGERED.name": "Se activó la alarma de incendios",
+  "ticket.problem.classifier.WALLS_CEILING_FLOOR_STRUCTURES.name": "Paredes, techo, suelo, forjados",
+  "ticket.problem.classifier.PEST_CONTROL_DISINFECTION.name": "Desratización, desinsectación, desinfección",
+  "ticket.problem.classifier.CRACKS_MASONRY_PLASTER_DAMAGE.name": "Grietas, desprendimiento de mampostería/yeso, daños en el pavimento/jambra",
+  "ticket.problem.classifier.SIGNAGE_ADVERTISING_EQUIPMENT_ON_FACADE.name": "Inscripción/publicidad/equipamiento en fachada",
+  "ticket.problem.classifier.REPAIR_IN_ROOM.name": "Reparación en el interior"
 }
