fix(condo): DOMA-8629 added translations

--- a/apps/condo/lang/en/en.json
+++ b/apps/condo/lang/en/en.json
@@ -1143,6 +1143,10 @@
   "import.meter.genitive": "Meter readings",
   "import.meter.plural": "Meters and readings",
   "import.meter.requiredFields": "Specify address, premises and its type, personal account number, meter type, meter number, number of tariffs and date of transmission of readings",
+  "import.propertyMeter.genitive": "Property meter readings",
+  "import.propertyMeter.plural": "Property meters",
+  "import.propertyMeter.prepositional": "Property meter readings",
+  "import.propertyMeter.requiredFields": "Specify address, meter type, number of tariffs and date of transmission of the meter readings",
   "import.meterReading.plural": "Meter readings",
   "import.partlyDataLoadedModal.alert.description": "You can try to add or create a table from this data and try to download again",
   "import.partlyDataLoadedModal.alert.message": "It has become possible to add {success} of {total} {genitive}",
