--- a/apps/condo/lang/ru/ru.json
+++ b/apps/condo/lang/ru/ru.json
@@ -1141,8 +1141,13 @@
   "import.helpModal.readInstruction.title": "Изучить инструкцию",
   "import.helpModal.title": "Мы обязательно поможем",
   "import.meter.genitive": "Показаний ИПУ",
-  "import.meter.plural": "Приборы и показания",
-  "import.meter.requiredFields": "Укажите адрес, помещение и его тип, номер лицевого счета, тип счетчика, номер счетчика, количество тарифов и дату передачи показаний",
+  "import.meter.plural": "Приборы",
+  "import.meter.prepositional": "Показаниях ИПУ",
+  "import.meter.requiredFields": "Укажите адрес, помещение и его тип, номер лицевого счета, тип счетчика, количество тарифов и дату передачи показаний",
+  "import.propertyMeter.genitive": "Показаний ОДПУ",
+  "import.propertyMeter.plural": "Приборы",
+  "import.propertyMeter.prepositional": "Показаниях ОДПУ",
+  "import.propertyMeter.requiredFields": "Укажите адрес, тип счетчика, количество тарифов и дату передачи показаний",
   "import.meterReading.plural": "Показания",
   "import.partlyDataLoadedModal.alert.description": "Незагруженные данные можно попробовать добавить вручную или сформировать из них таблицу и попробовать загрузить снова",
   "import.partlyDataLoadedModal.alert.message": "Получилось добавить {success} из {total} {genitive}",
