fix(condo): DOMA-9331 delete OldBaseNewsForm + delete featureFlag, add new category, fix translation (add emoji), add check on emptyTemplates

--- a/apps/condo/lang/en/en.json
+++ b/apps/condo/lang/en/en.json
@@ -1415,19 +1415,20 @@
   "news.filed.shareNews.button": "Send news",
   "news.initialOrganizationNewsItem.body": "The property management company [name of the PMC] is pleased to welcome you to the Doma app!\nEvery day, we work to ensure your life in the building is comfortable. Our staff is ready to promptly address any questions regarding the maintenance of the building, its surrounding area, and the operations of the property management company.\n\nHow to reach us:\n1. Submit a ticket through the mobile app: you can do this in the «Tickets» section.\n2. Call the emergency dispatch service number: +7 000 000 0000 — operates 24/7.\n3. Call the property management office: +7 000 000 0000 — we operate [OFFICE HOURS].\n4. Visit the property management office: [OFFICE ADDRESS AND HOURS OF OPERATION].\n\nIn the app, we will share important news with you. Thank you for choosing us ❤️",
   "news.initialOrganizationNewsItem.title": "Management company letter 📩",
-  "news.template.category.cleaning": "Cleaning",
-  "news.template.category.electricity": "Electricity",
-  "news.template.category.electricityAndElevators": "Electricity and elevators",
-  "news.template.category.elevators": "Elevators",
-  "news.template.category.gas": "Gas",
+  "news.template.category.cleaning": "\uD83E\uDDF9 Cleaning",
+  "news.template.category.electricity": "\uD83D\uDCA1 Electricity",
+  "news.template.category.electricityAndElevators": "\uD83D\uDCA1 Electricity and elevators",
+  "news.template.category.elevators": "\uD83D\uDED7 Elevators",
+  "news.template.category.gas": "\uD83E\uDDBA Gas",
   "news.template.category.heating": "Heating",
-  "news.template.category.intercom": "Intercom",
-  "news.template.category.meters": "Meters",
+  "news.template.category.intercom": "\uD83D\uDD22 Intercom",
+  "news.template.category.meters": "❗ Meters",
   "news.template.category.other": "Other",
-  "news.template.category.snow": "Snow",
-  "news.template.category.telephone": "Telephone",
-  "news.template.category.utilities": "All utilities",
-  "news.template.category.water": "Water",
+  "news.template.category.snow": "❄\uFE0F Snow",
+  "news.template.category.telephone": "\uD83D\uDCDE Telephone",
+  "news.template.category.utilities": "\uD83D\uDCA1 All utilities",
+  "news.template.category.water": "\uD83D\uDCA7 Water",
+  "news.template.category.fireProtection": "\uD83D\uDC68\uD83C\uDFFB Противопожарное",
   "news.type.common": "Common",
   "news.type.emergency": "Еmergency",
   "news.update.title": "Edit news",
