--- a/apps/condo/lang/es/es.json
+++ b/apps/condo/lang/es/es.json
@@ -1415,19 +1415,20 @@
   "news.filed.shareNews.button": "Send news",
   "news.initialOrganizationNewsItem.body": "¡El administrador [NOMBRE DE COMPAÑÍA] le da la bienvenida a la aplicación Doma!\nTrabajamos cada día para hacer más cómoda la convivencia en su comunidad. Estamos siempre a su disposición para responder a sus preguntas sobre el mantenimiento del edificio y proporcionar un informe detallado sobre el trabajo del administrador.\n\nCómo ponerse en contacto con nosotros:\n1. 1. Envíe una solicitud a través de la aplicación móvil: puede hacerlo en la sección ¨Solicitudes¨.\n2. Llame al número del servicio de emergencias: +34 XXX XXX XXX, disponible 24/7.\n3. Llame a la oficina: +34 XXX XXX XXX, abierto [HORAS DE TRABAJO].\n4. Visite la oficina: [DIRECCIÓN Y HORAS DE TRABAJO].\n\nEn la aplicación, le enviaremos noticias importantes. Gracias por elegirnos ❤️",
   "news.initialOrganizationNewsItem.title": "Mensaje de su administrador de comunidad 📩",
-  "news.template.category.cleaning": "Limpieza",
-  "news.template.category.electricity": "Electricidad",
-  "news.template.category.electricityAndElevators": "Electricidad y ascensores",
-  "news.template.category.elevators": "Ascensor",
-  "news.template.category.gas": "Gas",
+  "news.template.category.cleaning": "\uD83E\uDDF9 Limpieza",
+  "news.template.category.electricity": "\uD83D\uDCA1 Electricidad",
+  "news.template.category.electricityAndElevators": "\uD83D\uDCA1 Electricidad y ascensores",
+  "news.template.category.elevators": "\uD83D\uDED7 Ascensor",
+  "news.template.category.gas": "\uD83E\uDDBA Gas",
   "news.template.category.heating": "Calefacción",
-  "news.template.category.intercom": "Interfono",
-  "news.template.category.meters": "Contadores",
+  "news.template.category.intercom": "\uD83D\uDD22 Interfono",
+  "news.template.category.meters": "❗ Contadores",
   "news.template.category.other": "Otros",
-  "news.template.category.snow": "Nieve",
-  "news.template.category.telephone": "Teléfono",
-  "news.template.category.utilities": "Todos servicios",
-  "news.template.category.water": "Agua",
+  "news.template.category.snow": "❄\uFE0F Nieve",
+  "news.template.category.telephone": "\uD83D\uDCDE Teléfono",
+  "news.template.category.utilities": "\uD83D\uDCA1 Todos servicios",
+  "news.template.category.water": "\uD83D\uDCA7 Agua",
+  "news.template.category.fireProtection": "\uD83D\uDC68\uD83C\uDFFB protección contra incendios",
   "news.type.common": "Planificado",
   "news.type.emergency": "Incidencia",
   "news.update.title": "Editar noticia",
