fix(condo): DOMA-10909 add rate limit for AuthenticateUserWithPhoneAndPasswordService

--- a/apps/condo/lang/en/en.json
+++ b/apps/condo/lang/en/en.json
@@ -472,8 +472,7 @@
   "api.user.TOO_MANY_REQUESTS": "You have to wait {secondsRemaining} sec. to be able to send request again",
   "api.user.UNABLE_TO_FIND_CONFIRM_PHONE_ACTION": "Unable to verify your phone number. Try again or ask our support",
   "api.user.WRONG_PASSWORD_FORMAT": "Password must be in string format",
-  "api.user.authenticateUserWithPhoneAndPassword.USER_NOT_FOUND": "User not found by specified phone number",
-  "api.user.authenticateUserWithPhoneAndPassword.WRONG_PASSWORD": "Wrong password",
+  "api.user.authenticateUserWithPhoneAndPassword.WRONG_CREDENTIALS": "Wrong phone or password",
   "api.user.changePasswordWithToken.TOKEN_NOT_FOUND": "Unable to find non-expired ConfirmPhoneAction by specified token",
   "api.user.changePasswordWithToken.USER_NOT_FOUND": "Unable to find user with specified phone",
   "api.user.changePhoneNumberResidentUser.UNABLE_TO_FIND_CONFIRM_PHONE_ACTION": "Could not find token to change phone or it was expired. Try to start phone changing procedure from scratch.",
