--- a/apps/condo/lang/es/es.json
+++ b/apps/condo/lang/es/es.json
@@ -472,8 +472,7 @@
   "api.user.TOO_MANY_REQUESTS": "Espere {secondsRemaining} segundo, para volver a enviar la solicitud",
   "api.user.UNABLE_TO_FIND_CONFIRM_PHONE_ACTION": "No se ha podido confirmar el número de teléfono. Inténtelo de nuevo o póngase en contacto con el servicio de asistencia técnica",
   "api.user.WRONG_PASSWORD_FORMAT": "La contraseña debe ser una cadena",
-  "api.user.authenticateUserWithPhoneAndPassword.USER_NOT_FOUND": "Usuario no encontrado según el número de teléfono especificado",
-  "api.user.authenticateUserWithPhoneAndPassword.WRONG_PASSWORD": "Contraseña incorrecta",
+  "api.user.authenticateUserWithPhoneAndPassword.WRONG_CREDENTIALS": "Teléfono o contraseña incorrectos",
   "api.user.changePasswordWithToken.TOKEN_NOT_FOUND": "No se ha encontrado un token de cambio de contraseña válido",
   "api.user.changePasswordWithToken.USER_NOT_FOUND": "No se ha podido encontrar un usuario con el número de teléfono especificado",
   "api.user.changePhoneNumberResidentUser.UNABLE_TO_FIND_CONFIRM_PHONE_ACTION": "ТEl token de cambio de teléfono no es válido o ha caducado, vuelva a intentar el procedimiento de cambio de teléfono.",
