--- a/apps/condo/lang/ru/ru.json
+++ b/apps/condo/lang/ru/ru.json
@@ -472,8 +472,7 @@
   "api.user.TOO_MANY_REQUESTS": "Подождите {secondsRemaining} сек., чтобы отправить запрос снова",
   "api.user.UNABLE_TO_FIND_CONFIRM_PHONE_ACTION": "Не удалось подтвердить номер телефона. Попробуйте ещё раз или обратитесь в тех-поддержку",
   "api.user.WRONG_PASSWORD_FORMAT": "Пароль должен быть строкой",
-  "api.user.authenticateUserWithPhoneAndPassword.USER_NOT_FOUND": "Пользователь не найден по указанному телефону",
-  "api.user.authenticateUserWithPhoneAndPassword.WRONG_PASSWORD": "Неверный пароль",
+  "api.user.authenticateUserWithPhoneAndPassword.WRONG_CREDENTIALS": "Не верный телефон или пароль",
   "api.user.changePasswordWithToken.TOKEN_NOT_FOUND": "Не найден действительный токен на изменение пароля",
   "api.user.changePasswordWithToken.USER_NOT_FOUND": "Не удалось найти пользователя с указанным телефоном",
   "api.user.changePhoneNumberResidentUser.UNABLE_TO_FIND_CONFIRM_PHONE_ACTION": "Токен для смены телефона недействителен или просрочен, попробуйте повторить процедуру смены телефона заново.",
