--- a/apps/condo/lang/es/es.json
+++ b/apps/condo/lang/es/es.json
@@ -1435,6 +1435,7 @@
   "news.type.emergency": "Incidencia",
   "news.update.title": "Editar noticia",
   "notification.messages.B2C_APP_MESSAGE_PUSH.push.title": "{title}",
+  "notification.messages.B2B_APP_MESSAGE_PUSH.push.title": "{title}",
   "notification.messages.BANK_ACCOUNT_CREATION_REQUEST.email.subject": "Apertura de cuenta corriente de la comunidad",
   "notification.messages.BANK_ACCOUNT_CREATION_REQUEST.email.title": "Nueva solicitud de apertura de cuenta en Verde",
   "notification.messages.BILLING_RECEIPT_ADDED.email.subject": "¡Tiene la factura!",
