--- a/apps/condo/lang/ru/ru.json
+++ b/apps/condo/lang/ru/ru.json
@@ -1435,6 +1435,7 @@
   "news.type.emergency": "Аварийный",
   "news.update.title": "Редактировать новость",
   "notification.messages.B2C_APP_MESSAGE_PUSH.push.title": "{title}",
+  "notification.messages.B2B_APP_MESSAGE_PUSH.push.title": "{title}",
   "notification.messages.BANK_ACCOUNT_CREATION_REQUEST.email.subject": "Открытие расчетного счета на дом",
   "notification.messages.BANK_ACCOUNT_CREATION_REQUEST.email.title": "Новая заявка на открытие счета в Сбере",
   "notification.messages.BILLING_RECEIPT_ADDED.email.subject": "Вам квитанция!",
